View para confEmail

--- a/JeffSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite/Views/Shared/_LayoutAdmin.cshtml
@@ -32,7 +32,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-controller="Configuracao" asp-action="Index">do Site</a>
-                                <a class="dropdown-item">do Email</a>
+                                <a class="dropdown-item" asp-controller="Configuracao" asp-action="confEmail">do Email</a>
                             </div>
                         </li>
 
