--- a/JeffSite/Views/Home/Contato.cshtml
+++ b/JeffSite/Views/Home/Contato.cshtml
@@ -25,28 +25,28 @@
         <label>Nome</label>
         <input type="text" name="NameContact" class="form-control" value="@ViewBag.NameContact">
         @if(!string.IsNullOrEmpty(ViewBag.ErroNome)){
-            <span class="alert-danger" role="alert">@ViewBag.ErroNome</span>
+            <span class="text-danger">@ViewBag.ErroNome</span>
         }
     </div>
     <div class="form-group">
         <label>Email</label>
         <input type="text" name="EmailContact" class="form-control" value="@ViewBag.EmailContact">
         @if(!string.IsNullOrEmpty(ViewBag.ErroEmail)){
-            <span class="alert-danger" role="alert">@ViewBag.ErroEmail</span>
+            <span class="text-danger">@ViewBag.ErroEmail</span>
         }
     </div>
     <div class="form-group">
         <label>Telefone</label>
         <input type="text" name="PhoneContact" class="form-control" value="@ViewBag.PhoneContact">
         @if(!string.IsNullOrEmpty(ViewBag.ErroPhone)){
-            <span class="alert-danger" role="alert">@ViewBag.ErroPhone</span>
+            <span class="text-danger" role="alert">@ViewBag.ErroPhone</span>
         }
     </div>
     <div class="form-group">
         <label>Assunto</label>
         <input type="text" name="SubjectContact" class="form-control" value="@ViewBag.SubjectContact">
         @if(!string.IsNullOrEmpty(ViewBag.ErroSubject)){
-            <span class="alert-danger" role="alert"  >@ViewBag.ErroSubject</span>
+            <span class="text-danger" role="alert" >@ViewBag.ErroSubject</span>
         }
     </div>
 
@@ -59,6 +59,10 @@
         <input type="text" aria-label="numeroB" class="form-control" style="text-align: center;"  name="numb" id="numb"  readonly>
         <input type="text" aria-label="Resultado" class="form-control" name="resposta" placeholder="Responda">
     </div>
+    @if(!string.IsNullOrEmpty(ViewBag.conta)){
+        <span class="text-danger" role="alert" >@ViewBag.conta</span>
+    }
+    <br>
     
     <button class="btn btn-info">Enviar</button>
 </form>
