ajuste footer padding

--- a/JeffSite/Views/Shared/_FooterPartial.cshtml
+++ b/JeffSite/Views/Shared/_FooterPartial.cshtml
@@ -14,6 +14,7 @@
     text-align: center;
     color: #CFDBD5;
     margin-left: -5%;
+    padding-bottom: 20px;
 }
 .footer-socias-midias ul li{
     display: inline;
