--- a/JeffSite/Views/Home/Index.cshtml
+++ b/JeffSite/Views/Home/Index.cshtml
@@ -7,11 +7,10 @@
     <div>
         <div style="text-align:left"><h1 style="margin-top:25px; font-size:25px;">NOME DO <i>ESCRITOR</i></h1></div>
         <div>
-            <p>Formado em Língua e Literatura Portuguesas pela PUC-SP. Formado pelos tantos livros que leu por prazer em bibliotecas públicas ou que garimpou em livrarias. Vive inventando um jeito de aproximar as pessoas dos livros. Visitou um bocado de escolas e escreveu uma pilha de livros. Atualmente, está empenhado em preservar os amigos cúmplices. Prefere as redes de balanço às redes sociais. O Jonas estuda piano, ternura e bobeira espontânea.</p>
-            <p>Formado em Língua e Literatura Portuguesas pela PUC-SP. Formado pelos tantos livros que leu por prazer em bibliotecas públicas ou que garimpou em livrarias. Vive inventando um jeito de aproximar as pessoas dos livros. Visitou um bocado de escolas e escreveu uma pilha de livros. Atualmente, está empenhado em preservar os amigos cúmplices. Prefere as redes de balanço às redes sociais. O Jonas estuda piano, ternura e bobeira espontânea.</p>
+            <p>Autor de obras de fantasia, suspense, terror e sci-fi, redator freelancer, roteirista de quadrinhos, produtor de conteúdo de boardgames e RPG, membro ativo da Aberst (Associação Brasileira de Escritores de Romance Policial, Suspense e Terror), ator, escultor, mestre de RPG há 31 anos e chutador oficial de meteoros. </p>
         </div>
         <div style="text-align:right">
-            <a href="#">Saiba mais...</a>
+            <a asp-action="BioCompleta">Saiba mais...</a>
         </div>
     </div>
     
