movendo estilizacao para o arquivo isolado

--- a/JeffSite/wwwroot/css/site.css
+++ b/JeffSite/wwwroot/css/site.css
@@ -1,6 +1,43 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+h1.Titulo {
+  letter-spacing: 0.3em;
+  font-size: 25px;
+  margin-top: 40px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+
+h1.Titulo span{
+  text-shadow: #1b6ec2 0 15px 2px;
+}
+
+p{
+  letter-spacing: 0.1em;
+  padding-top: 10px;
+  padding-left: 40px;
+  padding-right: 20px;
+  text-align: justify;
+}
+
+p span.primeira-letra{
+  font-size: 20px;
+  padding-left: 20px;
+}
+
+span.negrito{
+text-shadow: #1b6ec2  1px 2px ;
+}
+
+ul.opcao-corpo li{
+  list-style:none;
+  padding:0;
+  margin:0;
+  margin-left: 50px;
+  letter-spacing: 0.1em;
+} 
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
