Ajuste estilo Home

--- a/JeffSite/Views/Home/Index.cshtml
+++ b/JeffSite/Views/Home/Index.cshtml
@@ -3,11 +3,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div>
     <div>
-        <div style="text-align:left"><h1 style="margin-top:25px; font-size:25px;">NOME DO <i>ESCRITOR</i></h1></div>
+        <h1 class="Titulo">Um poquinho <span>sobre<span>...</h1>
         <div>
-            <p>Autor de obras de fantasia, suspense, terror e sci-fi, redator freelancer, roteirista de quadrinhos, produtor de conteúdo de boardgames e RPG, membro ativo da Aberst (Associação Brasileira de Escritores de Romance Policial, Suspense e Terror), ator, escultor, mestre de RPG há 31 anos e chutador oficial de meteoros. </p>
+            <p>
+                <span class="primeira-letra">A</span>utor de obras de fantasia, suspense, terror e sci-fi, redator freelancer, roteirista de quadrinhos, produtor de conteúdo de boardgames e RPG, membro ativo da Aberst (Associação Brasileira de Escritores de Romance Policial, Suspense e Terror), ator, escultor, mestre de RPG há 31 anos e chutador oficial de meteoros.
+            </p>
         </div>
         <div style="text-align:right">
             <a asp-action="BioCompleta">Saiba mais...</a>
