--- a/JeffSite/Views/Home/Index.cshtml
+++ b/JeffSite/Views/Home/Index.cshtml
@@ -15,8 +15,9 @@
             <a asp-action="BioCompleta">Saiba mais...</a>
         </div>
     </div>
-    
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+    <div style="width: 800px; height: 600px; margin-left: 180px;">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             @foreach(var item in ViewBag.Carousels)
             { 
@@ -54,6 +55,9 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-        </div>
+    </div>
+    </div>
+    
+    
     
 </div>
