mosntarnso qual o tamanho da imagem precisa

--- a/JeffSite/Views/Carousel/Edit.cshtml
+++ b/JeffSite/Views/Carousel/Edit.cshtml
@@ -35,7 +35,7 @@
         <input type="hidden" asp-for="Image">
         <small>Nao se preocupe a imagem esta gravada, so altere se precisar!</small>
         <br>
-        <small>Por favor, incluir imagens coom no maximo 400px de largura e 200px de altura</small>
+        <small>Por favor, incluir imagens com no maximo <b>800px</b> de largura e <b>400px</b> de altura</small>
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="PathImage" value="../JeffSite/wwwroot/img/Carousel/">
