--- a/JeffSite/Views/Carousel/Create.cshtml
+++ b/JeffSite/Views/Carousel/Create.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Link)</label>
-        <input type="text" class="form-control" asp-for="Link">
+        <input type="text" class="form-control" asp-for="Link" value="http://">
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ExpirationDate)</label>
@@ -29,7 +29,7 @@
         <label>@Html.DisplayNameFor(Model => Model.Image)</label>
         <input type="file" accept="image/*" class="form-control" id="img" name="img">
         <input type="hidden" asp-for="Image">
-        <small>Por favor, incluir imagens coom no maximo 400px de largura e 200px de altura</small>
+        <small>Por favor, incluir imagens com no maximo <b>800px</b> de largura e <b>400px</b> de altura</small>
         <span asp-validation-for="Image" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="PathImage" value="../JeffSite/wwwroot/img/Carousel/">
