ajuste nome do metodo leitor

--- a/JeffSite/Views/Configuracao/Index.cshtml
+++ b/JeffSite/Views/Configuracao/Index.cshtml
@@ -38,6 +38,7 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.UrlMercadoLivre)</label>
         <input type="text" class="form-control" asp-for="UrlMercadoLivre">
+        <small>Nao esqueça do HTTP no endereço</small>
     </div>
     <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
     <button class="btn btn-info">Salvar</button>
