--- a/JeffSite/Views/Home/Contato.cshtml
+++ b/JeffSite/Views/Home/Contato.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <div style="text-align:left"><h1 style="margin-top:25px; font-size:25px;">CONTATO</h1></div>
+    <h1 class="Titulo"><span>Contato<span></h1>
     <div style="text-align: left" >
         @if(!string.IsNullOrEmpty(ViewBag.Message)){
             if((bool)ViewBag.Enviado){
