--- a/JeffSite/Views/Leitor/ApprovePost.cshtml
+++ b/JeffSite/Views/Leitor/ApprovePost.cshtml
@@ -20,8 +20,7 @@
       {
           <tr>
             <th scope="row">
-                @Html.ActionLink(" ", "Approve", new { id = item.Id }, new { @class = "fas fa-check-square" })
-
+                @Html.ActionLink(" ", "Approve", new { id = item.Id }, new { @class = "far fa-thumbs-up fa-2x" })
             </th>
             <td>@Html.DisplayFor(modelItem => item.Id)</td>
             <td>@Html.DisplayFor(modelItem => item.Name)</td>
