--- a/JeffSite/Views/Admin/Index.cshtml
+++ b/JeffSite/Views/Admin/Index.cshtml
@@ -4,17 +4,14 @@
     string user = "";
 }
 
-@if (TempData["message"] != null)
-{
-    <div class="alert alert-danger" role="alert">
-        <b>Erro: </b>@TempData["message"].ToString()
-    </div>
-    if(TempData["user"] != null){
-        user = TempData["user"].ToString();
-    }
-}
-
-<div class="container">
+<div class="container" 
+    style="width: 50%;
+    margin-top: 10%;
+    border: 2px black solid;
+    border-radius: 20px;
+    padding: 20px;
+    background-color: #EBEBEB;">
+    <h1 style="text-align: center;">Login</h1>
     <form method="post" asp-action="ValidateUser" asp-controller="Admin">
         <div class="form-group">
             <label for="exampleInputEmail1">Usuario</label>
@@ -24,6 +21,17 @@
             <label for="exampleInputPassword1">Senha</label>
             <input type="password" class="form-control" placeholder="Digite a senha" asp-for="Pass">
         </div>
+
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-danger" role="alert">
+                <b>Erro: </b>@TempData["message"].ToString()
+            </div>
+            if(TempData["user"] != null){
+                user = TempData["user"].ToString();
+            }
+        }
+
         <button type="submit" class="btn btn-primary">Logar</button>
     </form>
 </div>
