Pag enviar mailling

--- a/JeffSite/Views/Shared/_LayoutAdmin.cshtml
+++ b/JeffSite/Views/Shared/_LayoutAdmin.cshtml
@@ -57,7 +57,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-controller="Malling" asp-action="Index">Ver emails</a>
-                                <a >Pedidos</a>
+                                <a class="dropdown-item" asp-controller="Malling" asp-action="EnviarEmailMailling">Pedidos</a>
                             </div>
                         </li>
                     </ul>
