alterado estilizacao carrosel para mobile

--- a/JeffSite/Views/Home/Index.cshtml
+++ b/JeffSite/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    <div style="width: 800px; height: 600px; margin-left: 180px;">
+    <div id="carrosselMain" >
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 @foreach(var item in ViewBag.Carousels)
