estilizacao forme contato mobile

--- a/JeffSite/Views/Home/Contato.cshtml
+++ b/JeffSite/Views/Home/Contato.cshtml
@@ -50,10 +50,8 @@
         }
     </div>
 
+    Você é humano? Faça a conta: 
     <div class="input-group">
-        <div class="input-group-prepend">
-            <span class="input-group-text">Você é humano? Faça a conta: </span>
-        </div>
         <input type="text" aria-label="numeroA" class="form-control" style="text-align: center;" name="numA" id="numA" readonly>
         <input type="text" aria-label="Operacao" class="form-control" style="text-align: center;"  name="ope" id="ope"  readonly>
         <input type="text" aria-label="numeroB" class="form-control" style="text-align: center;"  name="numb" id="numb"  readonly>
