--- a/JeffSite/Views/Loja/Index.cshtml
+++ b/JeffSite/Views/Loja/Index.cshtml
@@ -63,7 +63,7 @@
                         <input class="form-control" type="email" id="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="dedicado" class="col-form-label">Nome do dedicado</label>
+                        <label for="dedicado" class="col-form-label">Nome para dedicatória</label>
                         <input class="form-control" type="text" id="dedicado">
                     </div>
                     <div class="form-group">
@@ -97,7 +97,7 @@
                         <input class="form-control" type="text" id="complemento">
                     </div>
                     <div class="alert alert-success" role="alert" id="aviso" style="display:none">
-                        Enviado, por favor aguarda que você receberá novas instruções.
+                        Enviado, por favor aguardar  que você receberá novas instruções.
                     </div>
                 </div>
                 <div class="modal-footer">
