--- a/JeffSite/Views/Configuracao/Index.cshtml
+++ b/JeffSite/Views/Configuracao/Index.cshtml
@@ -23,6 +23,7 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ImgLogo)</label>
         <input type="file" accept="image/*" class="form-control" asp-for="ImgLogo">
+        <small>Dimensão máxima  200px x 200px - Nome da imagem devera ser <b>ImgLogo.jpg</b></small>
         @* <input type="text" class="form-control" asp-for="ImgLogo"> *@
         @if(!string.IsNullOrEmpty(ViewBag.FileNameLogoErro)){
             <span class="text-danger">@ViewBag.FileNameLogoErro</span>
@@ -31,13 +32,14 @@
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ImgProfile)</label>
         <input type="file" accept="image/*" class="form-control" asp-for="ImgProfile">
+        <small>Dimensão 300px de altura - Nome da imagem devera ser <b>ImgProfile.jpg</b></small>
         @if(!string.IsNullOrEmpty(ViewBag.FileNameProfileErro)){
             <span class="text-danger">@ViewBag.FileNameProfileErro</span>
         }
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.UrlMercadoLivre)</label>
-        <input type="text" class="form-control" asp-for="UrlMercadoLivre">
+        <input type="text" class="form-control" asp-for="UrlMercadoLivre" value="http://">
         <small>Nao esqueça do HTTP no endereço</small>
     </div>
     <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
