--- a/JeffSite/Views/Home/Contato.cshtml
+++ b/JeffSite/Views/Home/Contato.cshtml
@@ -62,23 +62,38 @@
     }
     <br>
     
-    <button class="btn btn-info">Enviar</button>
+    <!-- button class="btn btn-info">Enviar</button -->
+    <button id="btn-submit" class="btn btn-info">
+        <span id="btnSpinner" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"style="display: none;"></span>
+        <span id="btnSpinnerText" style="display: none;">Enviando...</span>
+        <span id="btnSpinnerText1">Enviar</span>
+    </button>
 </form>
 
-<script>
-    document.getElementById('numA').value = Math.floor(Math.random() * 11)
-    document.getElementById('numb').value = Math.floor(Math.random() * 11)
-    document.getElementById('ope').value = escolhaOperacao()
+@section Scripts{
+    <script>
+    
+        document.getElementById('numA').value = Math.floor(Math.random() * 11)
+        document.getElementById('numb').value = Math.floor(Math.random() * 11)
+        document.getElementById('ope').value = escolhaOperacao()
 
-    function escolhaOperacao(){
-        var aux = Math.floor(Math.random() * 3)
-        switch(aux){
-            case 0:
-                return '+'
-            case 1:
-                return '-'
-            case 2:
-                return 'x'
+        function escolhaOperacao(){
+            var aux = Math.floor(Math.random() * 3)
+            switch(aux){
+                case 0:
+                    return '+'
+                case 1:
+                    return '-'
+                case 2:
+                    return 'x'
+            }
         }
-    }
-</script>
+
+        $('#btn-submit').on('click', () => { 
+            $("#btnSpinner").show()
+            $("#btnSpinnerText").show()
+            $("#btnSpinnerText1").hide()
+        })
+
+    </script>
+}
