--- a/JeffSite/Views/Shared/_Layout.cshtml
+++ b/JeffSite/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a asp-action="Index" id="linkLogo"><div class="divLogoImage"></div></a>
+                <a asp-controller="Home" asp-action="Index" id="linkLogo"><div class="divLogoImage"></div></a>
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item" id="firstLiNavbar">
@@ -45,7 +45,7 @@
     </div>
     
     <div class="container" style="background-color: #33415C;">
-        @{Html.RenderPartial("_FooterPartial");}
+        @await Html.PartialAsync("_FooterPartial")
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
