add home do menu quando o logo some

--- a/JeffSite/Views/Shared/_Layout.cshtml
+++ b/JeffSite/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item" id="firstLiNavbar">
+                            <a class="nav-link" style="padding-left: 3.5em;" asp-controller="Home" asp-action="Index" id="menuHome" >HOME</a>
+                        </li>
+                        <li class="nav-item" id="firstLiNavbar">
                             <a class="nav-link" style="padding-left: 3.5em;" asp-controller="Home" asp-action="BioCompleta">BIO COMPLETA</a>
                         </li>
                         <li class="nav-item">
