--- a/JeffSite/Views/Leitor/Index.cshtml
+++ b/JeffSite/Views/Leitor/Index.cshtml
@@ -63,6 +63,10 @@
                     <span asp-validation-for="Nickname" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label>@Html.DisplayNameFor(model => model.Birthday)</label>
+                    <input type="date" class="form-control" asp-for="Birthday">
+                </div>
+                <div class="form-group">
                     <input type="hidden" asp-for="PathImg" value="../JeffSite/wwwroot/img/Leitor/">
                     <label>@Html.DisplayNameFor(model => model.PathImg)</label>
                     <input type="file" accept="image/*"  class="form-control" name="Img">
