--- a/JeffSite/Views/Leitor/ApprovePost.cshtml
+++ b/JeffSite/Views/Leitor/ApprovePost.cshtml
@@ -7,7 +7,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Aprovar</th>
+      <th scope="col">#</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Id)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Name)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Email)</th>
@@ -20,7 +20,8 @@
       {
           <tr>
             <th scope="row">
-                @Html.ActionLink(" ", "Approve", new { id = item.Id }, new { @class = "far fa-thumbs-up fa-2x" })
+                @Html.ActionLink(" ", "Approve", new { id = item.Id }, new { @class = "far fa-thumbs-up fa-2x", @style="text-decoration:none;"  })
+                @Html.ActionLink(" ", "Disapprove", new { id = item.Id }, new { @class = "far fa-thumbs-down fa-2x", @style="text-decoration:none;" })
             </th>
             <td>@Html.DisplayFor(modelItem => item.Id)</td>
             <td>@Html.DisplayFor(modelItem => item.Name)</td>
