nao aprovando o post

--- a/JeffSite/Views/Leitor/Disapprove.cshtml
+++ b/JeffSite/Views/Leitor/Disapprove.cshtml
@@ -5,7 +5,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<form asp-action="ApprovePost" method="POST">
+<form asp-action="DisapprovePost" method="POST">
 <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Id)</label>
         <input type="text" class="form-control" asp-for="Id" readonly>
