--- a/JeffSite/Views/Malling/RemoverEmail.cshtml
+++ b/JeffSite/Views/Malling/RemoverEmail.cshtml
@@ -1,10 +1,7 @@
 <h1 class="Titulo">Remover seu  <span>email<span>...</h1>
-@{
-    string email = ViewBag.Email.ToString() == null ? string.Empty : ViewBag.Email.ToString();
-}
 
 <form asp-controller="Malling" asp-action="RemoverEmail" method="POST">
-    <input type="hidden" name="email" value="@email">
+    <input type="email" name="email" placeholder="Informe seu email">
     <label for="opcao">Deseja realmente remover seu email?</label>
     <select name="opcao">
         <option>Selecione um opção</option>
