--- a/JeffSite/Views/Loja/Create.cshtml
+++ b/JeffSite/Views/Loja/Create.cshtml
@@ -24,7 +24,7 @@
         <span asp-validation-for="ImgName" class="text-danger"></span>
     </div>
     
-    <a asp-controller="Loja" asp-action="ListLivro">Voltar</a>
+    <a asp-controller="Loja" asp-action="ListLivros">Voltar</a>
     <button class="btn btn-primary">Proximo</button>
 </form>
 
