--- a/JeffSite/Views/Loja/ListLivros.cshtml
+++ b/JeffSite/Views/Loja/ListLivros.cshtml
@@ -17,7 +17,7 @@
       <th scope="col">#</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Id)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.Title)</th>
-      <th scope="col">@Html.DisplayNameFor(Model => Model.Description)</th>
+      <th scope="col">@Html.DisplayNameFor(Model => Model.Esgotado)</th>
       <th scope="col">@Html.DisplayNameFor(Model => Model.ImgName)</th>
     </tr>
   </thead>
@@ -34,7 +34,13 @@
             </th>
             <td>@Html.DisplayFor(modelItem => item.Id)</td>
             <td>@Html.DisplayFor(modelItem => item.Title)</td>
-            <td>@Html.DisplayFor(modelItem => item.Description)</td>
+            <td>
+              @if(item.Esgotado){
+                <input type="checkbox" class="form-control" disabled checked>
+              }else{
+                <input type="checkbox" class="form-control" disabled>
+              }
+            </td>
             <td><img src="@pathImg\\@item.ImgName" style="width:100px;"></td>
             
         </tr>
